src/objects/VPM_GlobalFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contain list of global fields</description>
    <fields>
        <fullName>VPM_Fieldtype__c</fullName>
        <label>VPM_Fieldtype</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_apiName__c</fullName>
        <label>VPM_apiName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_fieldValue__c</fullName>
        <label>VPM_fieldValue</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>VPM_GlobalFields</label>
</CustomObject>